--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "fun": "npm run format && tsc && npm run lint"
   },
   "dependencies": {
+    "leaflet": "^1.9.3",
     "next": "^13.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
