--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "swr": "^2.1.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
