--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,12 @@
   ],
   "plugins": ["simple-import-sort"],
   "rules": {
+    "import/no-duplicates": "error",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
-    "@typescript-eslint/consistent-type-imports": "error"
+    "@typescript-eslint/consistent-type-imports": "error",
+
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
   }
 }
