--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ip-address-tracker",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,36 +7,35 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --ignore-path .gitignore \"**/*.+(ts|js|jsx|tsx|json|css)\" --write --cache",
-    "fun": "npm run format && tsc && npm run lint"
+    "format": "prettier . --ignore-path .gitignore --write --cache",
+    "fun": "pnpm format && tsc && pnpm lint"
   },
   "dependencies": {
-    "leaflet": "^1.9.3",
-    "next": "^13.2.4",
+    "leaflet": "^1.9.4",
+    "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "swr": "^2.1.1"
+    "server-only": "^0.0.1",
+    "validator": "^13.9.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@types/validator": "^13.7.17",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.37.0",
-    "eslint-config-next": "^13.2.4",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
-  },
-  "prettier": {
-    "singleQuote": true
+    "postcss": "^8.4.24",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   }
 }
